Fixed spacing on choices fields

--- a/src/DialogueTreeMaker/DialogueMaker/Choices/choices-list.css
+++ b/src/DialogueTreeMaker/DialogueMaker/Choices/choices-list.css
@@ -7,10 +7,10 @@
 
 .choice-list-item {
     display: grid;
-    grid-template-columns: 17% 50% 17% 10%;
+    grid-template-columns: 2fr 5fr 2fr 1fr;
     grid-template-rows: auto;
 
-    column-gap: 4px;
+    column-gap: 12px;
 
     margin: 8px 0;
 }
